--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -46,9 +46,10 @@
       </div>
 
       <footer>
-        <p>&copy; {{ site.author.name }} 2012 
-          with help from <a href="http://jekyllbootstrap.com" target="_blank" title="The Definitive Jekyll Blogging Framework">Jekyll Bootstrap</a>
-          and <a href="http://twitter.github.com/bootstrap/" target="_blank">Twitter Bootstrap</a>
+        <p>&copy; {{ site.author.name }} 2012 (C)
+          Comments platform provided by <a href="http://disqus.com" target="_blank" title="Disqus">Disqus</a> <br>
+          Using the <a href="http://twitter.github.com/bootstrap/" target="_blank">Twitter Bootstrap Framework Theme</a> <br>
+          Proudly created with <a href="http://www.jekyllrb.com">Jekyll</a> and <a href="http://www.ruby-lang.org">Ruby</a>
         </p>
       </footer>
 
